cmake_minimum_required(VERSION 3.0)

find_package(FLEX)

include_directories(${jaula_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

FLEX_TARGET(JaulaLexan ${jaula_SOURCE_DIR}/jaula/jaula_lexan.ll ${CMAKE_BINARY_DIR}/jaula/jaula_lexan.cxx)

list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_bad_data_type.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_exception.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_lexan_error.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_name_duplicated.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_no_error.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_parse.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_syntax_error.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_array.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_boolean.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_complex.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_null.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_number_int.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_number.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_object.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value_string.cc)
list(APPEND SRCS ${jaula_SOURCE_DIR}/jaula/jaula_value.cc)
list(APPEND HDRS ${jaula_SOURCE_DIR}/jaula/jaula.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_bad_data_type.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_exception.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_lexan_error.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_lexan.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_name_duplicated.h) 
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_no_error.h) 
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_parse.h) 
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_syntax_error.h) 
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_array.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_boolean.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_complex.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_null.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_number_int.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_number.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_object.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value_string.h)
list(APPEND HDRS_OTHERS ${jaula_SOURCE_DIR}/jaula/jaula_value.h)

add_library(jaula SHARED ${SRCS} ${HDRS} ${HDRS_OTHERS} ${FLEX_JaulaLexan_OUTPUTS})
add_library(jaula_static STATIC ${SRCS} ${HDRS} ${HDRS_OTHERS} ${FLEX_JaulaLexan_OUTPUTS})
set_property(TARGET jaula_static PROPERTY POSITION_INDEPENDENT_CODE ON)

install(TARGETS jaula LIBRARY DESTINATION lib)
install(TARGETS jaula_static ARCHIVE DESTINATION lib)
install(FILES ${HDRS} DESTINATION include)
install(FILES ${HDRS_OTHERS} DESTINATION include/jaula)
